@@ -5,10 +5,12 @@ jEdit 5.0 version history
 {{{ Version 5.0pre1
 
 Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
-Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw and Jarek Czekalski for
-contributing to this release.
+Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl and Jarek Czekalski
+for contributing to this release.
 
 {{{ Bug fixes
+
+- Fixed rectangular selection constructor (patch #3440310) (peibl)
 
 - When copying a file in VFSBrowser, if a file with the same name already exists
   a suffix copy-n is added to avoid deleting the existing file (#3470759)
